--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,50 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Quicksand', sans-serif;
 }
-#map {
-  position: absolute;
-  top: 0;
-  bottom: 0;
+.header {
+  margin-top: 3em;
   width: 100%;
+  padding: 1em;
+  text-align: center;
 }
-
+.map {
+  margin: auto;
+  margin-top: 3em;
+  width: 90%;
+  min-height: 500px;
+  max-width: 700px;
+}
+.info {
+  margin: auto;
+  width: 100%;
+  max-width:400px;
+  text-align: center;
+  font-size: 1rem;
+}
+.footer {
+  padding: 3em;
+  margin-top: 9em;
+  height: 100px;
+  width: 100%;
+  background-color: #343434;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  flex-direction: column;
+  font-size:1rem;
+  color:white;
+}
+.author img {
+  width: 20px;
+}
+.author a {
+  color:#daa520;
+}
+.author a:hover {
+  font-weight: bold;
+}
